--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,13 +9,17 @@ repository = "https://github.com/Lut99/info-rs"
 
 [dependencies]
 async-trait = { version = "0.1", optional = true }
-serde = { version = "1.0", features = ["derive"] }
+serde = { version = "1.0", features = ["derive"], optional = true }
 serde_json = { version = "1.0", optional = true }
 serde_yaml = { version = "0.9", optional = true }
 tokio = { version = "1.33", default-features = false, features = ["fs","io-util"], optional = true }
 
 
+[dev-dependencies]
+tokio-test = "0.4"
+
+
 [features]
 "async-tokio" = [ "dep:async-trait", "dep:tokio" ]
-"json" = [ "dep:serde_json" ]
-"yaml" = [ "dep:serde_yaml" ]
+"serde-json" = [ "dep:serde", "dep:serde_json" ]
+"serde-yaml" = [ "dep:serde", "dep:serde_yaml" ]
